Ajustando documentação dos controllers
